# Remote_Control

./: .gitignore  Overall_solution.md  README.en.md  README.jp.md  README.md  系统功能模块设计文档.md  系统异常说明文档.md
remote/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.user.2d40779  CMakeLists.txt.user.60a60f7  CMakeLists.txt.user.676ba10  Login.cpp  Login.qml  Mainwindow.qml  Register.qml  RemoteApp.manifest  account.cpp  account.h  applicationData.h  database.cpp  database.h  globalproperties.cpp  globalproperties.h  image.qrc  imageresource.cpp  imageresource.h  resource.qrc
remote/.qtcreator/: project.json.qtds
remote/Code/AppData/: devicedata.cpp  devicedate.h  deviceinfomanager.cpp  deviceinfomanager.h  installedSoftware.cpp  installedSoftware.h  tcpconnection.cpp  tcpconnection.h
remote/Code/DataBase/: database.cpp  database.h
remote/Code/LogUntils/: AppLog.cpp  AppLog.h
remote/Code/PID/: AdaptivePIDController.cpp  AdaptivePIDController.h
remote/Code/RDP/: remotecontrol.cpp  remotecontrol.h  remotecontrolthread.cpp  remotecontrolthread.h  remoteimageprovider.cpp  remoteimageprovider.h
remote/Code/TCP/: tcpconnection.cpp  tcpconnection.h  tcpservertest.cpp  tcpservertest.h  tcpserverthread.cpp  tcpserverthread.h
remote/Code/Users/: account.cpp  account.h  userdevice.cpp  userdevice.h
remote/Model/: DeviceAppModel.qml  DeviceInformationModel.qml
remote/Page/: DirectConnect.qml  Login.qml  Main.qml  Mainwindow.qml  RCRMainwindow.qml  Register.qml  RegisterDialog.qml  SystemErrorDialog.qml  UserDevices.qml
remote/Page/Dialog/: LockDialog.qml  SuecessDialog.qml  SystemErrorDialog.qml
remote/Page/RCCpage/: DeviceLockDialog.qml  DirectConnect.qml  FileDialogs.qml  Mainwindow.qml  RemoteAppList.qml  RemoteDraw.qml  RemoteSetting.qml  UserDevices.qml
remote/Page/RCRpage/: NotificationBanner.qml  PersonalSetting.qml  RCRMainwindow.qml  WinApplicationPreview.qml
系统设计文档/: UI设计文档.md  logUIimage  系统功能模块设计文档.md  系统网络数据传输数据结构设计文档.md
